binrw/tests/ui/binrw_br_temp_no_bw_ignore.stderr
error: `#[br(temp)]` is invalid without a corresponding `#[bw(ignore)]` or `#[bw(calc)]`
 --> tests/ui/binrw_br_temp_no_bw_ignore.rs:5:5
  |
5 | /     #[br(temp)]
6 | |     len: u32,
  | |____________^
